# cargo-ado

./: Cargo.toml
.github/workflows/: ci.yaml  fmt.yaml  release.yaml
src/: main.rs
