[package]
name = "cargo-ado"
edition = "2021"
license = "MIT"
homepage = "https://github.com/DrChat/cargo-ado"
repository = "https://github.com/DrChat/cargo-ado"
version = "0.0.1"
authors = ["Justin Moore <jusmoore@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.0"
clap = { version = "4.0.18", features = ["cargo"] }
