[package]
name = "cargo-ado"
description = "Azure DevOps wrapper for Cargo"
edition = "2021"
license = "MIT"
homepage = "https://github.com/DrChat/cargo-ado"
repository = "https://github.com/DrChat/cargo-ado"
version = "0.0.2"
authors = ["Justin Moore <jusmoore@microsoft.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.0"
clap = { version = "4.0.18", features = ["cargo"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
